# Uni-Seeker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.test.yml  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ef449ae0f1a_add_monthly_revenues_table.py  3bcd5668fe84_merge_perf_index_and_signal_fires_heads.py  8bda05408c97_add_price_estimates_table.py  UNI-ALERT-001_add_alert_rules.py  UNI-BILL-001_add_stripe_fields_to_users.py  UNI-BILL-002_add_processed_webhook_events.py  UNI-COMP-001_add_kyc_device_audit_tables.py  UNI-F13-001_add_institutional_13f_tables.py  UNI-F13-002_add_telegram_chat_id_to_users.py  UNI-PERF-001_index_gaps.py  UNI-PERF-002_f13_covering_and_sync_partial_indexes.py  UNI-PORT-001_add_portfolio_tables.py  UNI-PORT-002_add_portfolio_dividends.py  UNI-PORT-003_add_holdings_snapshots.py  UNI-SIGFIRE-001_add_signal_fires.py  UNI-SYNC-001_add_sync_states_partial_unique_indexes.py  UNI-SYNC-002_expand_error_message_column.py  UNI-TWINST-001_add_tw_institutional_net.py  UNI-USER-003_add_notify_via_email_to_users.py  UNI-WATCH-001_add_watchlist_items.py  af683002958e_add_journal_tables.py  b3a1c9d2e4f5_normalize_schema_3nf.py  e900cd627d8a_add_industry_metrics_table.py
backend/app/: auth.py  cache.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai_commentary.py  alpha.py  auth.py  backtest.py  backtest_jobs.py  billing.py  company.py  etf_arbitrage.py  factors.py  financial_metrics.py  financials.py  heatmap.py  indicators.py  institutional.py  journal.py  low_base.py  macro.py  margin.py  market.py  me_audit.py  me_notifications.py  notifications.py  onboarding.py  portfolio.py  predictions.py  prices.py  revenue.py  router.py  scanner.py  screener.py  signals.py  stocks.py  strategies.py  sync.py  tw_institutional.py  valuation_models.py  watchlist.py  ws.py
backend/app/db/: __init__.py
backend/app/db/models/: __init__.py
backend/app/middleware/: compliance_purifier.py  error_handler.py  tier_guard.py  trace_id.py
backend/app/models/: __init__.py  audit_log.py  backtest_job.py  backtest_result.py  enums.py  financial_metrics.py  financial_statement.py  industry.py  industry_metrics.py  journal.py  margin.py  notification.py  portfolio_backtest.py  price.py  price_estimate.py  processed_webhook_event.py  revenue.py  signal_fire.py  signal_scan.py  stock.py  sync_state.py  tw_institutional.py  user.py  user_device.py  valuation.py  watchlist_item.py
backend/app/modules/ai_commentary/: __init__.py  composer.py
backend/app/modules/alerts/: __init__.py  evaluator.py
backend/app/modules/backtester/: __init__.py  auto_discovery.py  bootstrap.py  engine.py  grid_search.py  metrics.py  portfolio.py  portfolio_backtest.py
backend/app/obs/: _sentry_filters.py  logging.py  metrics.py  sentry.py  trace.py
backend/app/repositories/: __init__.py
backend/app/scheduler/: __init__.py
backend/app/schemas/: _base.py  ai_commentary.py  audit.py  auth.py  backtest.py  backtest_job.py  best_four_point.py  billing.py  etf_arbitrage.py  factor.py  financial.py  indicator.py  journal.py  low_base.py  macro.py  margin.py  market.py  me_notifications.py  notification.py  onboarding.py  portfolio.py  price.py  revenue.py  scanner.py  screener.py  signals.py  strategy.py  tw_institutional.py  types.py  valuation.py  watchlist.py  watchlist_live.py
backend/app/services/: audit.py  audit_query_service.py  device.py  job_queue.py  job_worker.py  websocket_manager.py
backend/scripts/: backfill_us_sector_taxonomy.py  backfill_yfinance.py  bench_low_base_scan.py  check_sentry_dsn.py  init_fresh_db.py  reconcile_orphan_stocks.py  run_cusip_backfill.py  seed_e2e_data.py  smoke-e2e.py  smoke_13f_real_edgar.py
backend/sql/: create_sync_states.sql
backend/tests/: conftest.py  test_alembic_single_head.py  test_import_linter_contracts.py
backend/tests/contract/: test_api_contracts.py  test_backtesting_core_contract.py  test_prediction_engine_contract.py
backend/tests/external_smoke/: conftest.py  test_finmind_smoke.py  test_stripe_smoke.py  test_yfinance_smoke.py
backend/tests/integration/: conftest.py  test_ai_commentary_api.py  test_ai_commentary_composer.py  test_alert_repo.py  test_alert_service.py  test_alerts_api.py  test_analytics_service_paths.py  test_auth_api.py  test_backtest_api.py  test_backtest_jobs_api.py  test_best_four_point_api.py  test_billing_api.py  test_company_api.py  test_compliance_purifier.py  test_cusip_backfill_job.py  test_cusip_mapper_figi.py  test_device_limit.py  test_dividend_monthly_summary_repo.py  test_earnings_calendar.py  test_etf_arbitrage_api.py  test_f13_notification_service.py  test_f13_sync_task.py  test_factors_api.py  test_financials_api.py  test_fx_service.py  test_heatmap_api.py  test_holdings_analytics_api.py  test_holdings_api.py  test_holdings_csv_export.py  test_holdings_csv_import.py  test_holdings_dividends_api.py  test_import_with_broker.py  test_indicators_api.py  test_institutional_api.py  test_institutional_bulk_subscribe.py  test_institutional_history.py  test_institutional_legacy_api.py  test_institutional_repos.py  test_institutional_services.py  test_job_queue.py  (+38 more)
backend/tests/models/: test_audit_log.py  test_user_device.py  test_watchlist_item.py
backend/tests/obs/: test_logging.py  test_metrics.py  test_sentry.py  test_trace.py
backend/tests/services/: test_audit.py  test_block_device.py  test_device_fingerprint.py
backend/tests/test_api/: test_alpha_nba.py  test_alpha_stocks.py  test_predictions.py
backend/tests/test_stock_signals/: test_package.py  test_sharp_detector.py
backend/tests/unit/: test_auth.py  test_cache.py  test_config.py  test_error_handler.py  test_fifo_engine.py  test_models.py  test_rebalance.py  test_strict_schemas.py  test_tier_guard.py  test_websocket_manager.py
(+677 files in other folders)
