[project]
name = "uni-seeker-backend"
version = "0.1.0"
description = "Taiwan + US stock analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.1,<25",
    "sentry-sdk[fastapi]>=2.0,<3",
    "prometheus-client>=0.20,<1",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "python-telegram-bot>=21.0",
    "yfinance>=0.2.48",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "stripe>=7.0.0",
    "backtesting_core",
    "prediction-engine",
    "observability-core",
]

[tool.uv.sources]
# AAE workspace packages — git+ssh + subdirectory pattern (Phase 8 V.2):
# CI uses repo deploy key (AAE_DEPLOY_KEY secret) loaded via ssh-agent in workflow.
backtesting_core = { git = "ssh://git@github.com/stanleyoho/adaptive-alpha-engine.git", rev = "d0078f2", subdirectory = "packages/backtesting_core" }
prediction-engine = { git = "ssh://git@github.com/stanleyoho/adaptive-alpha-engine.git", rev = "d0078f2", subdirectory = "packages/prediction_engine" }
# observability-core is PUBLIC since Phase 8 V.2 — git+https works without auth.
observability-core = { git = "https://github.com/stanleyoho/observability-core.git", rev = "v0.2.1" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "apscheduler.*",
    "telegram.*",
    "yfinance.*",
    # Internal packages that don't ship `py.typed` yet — track per-package
    # adoption and remove the override once they publish py.typed.
    "observability_core.*",
    "prediction_engine.*",
    # Third-party without stubs in this lockfile. pandas-stubs and
    # types-PyYAML could become dev deps later; until then ignore.
    "pandas.*",
    "yaml",
]
ignore_missing_imports = true